src/tess/tl/test/fail/test_fail_const_strip_struct_field.tl
#module main

Holder: { p: Ptr[Int] }

main() {
    x := 42
    cp: Ptr[Const[Int]] := x.&
    h := Holder(p = cp)          // error: cannot strip const from field
    0
}
